2002-09-24  Richard Williamson   <rjw@apple.com>

        Added FIXME not about unresolved issue with CFStringEncoding/NSStringEncoding.
        
        * WebView.subproj/WebController.h:

2002-09-24  Richard Williamson   <rjw@apple.com>

        Documentation for WebDataSource and WebFrame.
        
        * WebView.subproj/WebDataSource.h:
        * WebView.subproj/WebDataSource.m:
        (-[WebDataSource frameExists:]):
        * WebView.subproj/WebDataSourcePrivate.h:
        * WebView.subproj/WebDataSourcePrivate.m:
        (-[WebDataSource addFrame:]):
        * WebView.subproj/WebFrame.h:

2002-09-24  Darin Adler  <darin@apple.com>

	- fixed 3059266 -- REGRESSION: clicking in web view when location field is
	focused does not focus web view

        * WebView.subproj/WebHTMLView.m: (-[WebHTMLView needsPanelToBecomeKey]):
	Must override this to return YES, because NSClipView makes it return NO
	even though we accept the first responder.

2002-09-24  John Sullivan  <sullivan@apple.com>

	- fixed 3056158 -- REGRESSION: Page up/down should scroll one 
	whole contentView minus at least one readable line of text

	This was broken a while back when the keyboard scrolling code
	migrated into WebKit.

        * WebView.subproj/WebViewPrivate.m:
        (-[WebView _verticalKeyboardScrollAmount]),
        (-[WebView _horizontalKeyboardScrollAmount]):
	New private methods, return one arrow key's worth of scrolling.
        (-[WebView _scrollLineVertically:]),
        (-[WebView _scrollLineHorizontally:]):
	Now use the broken-out methods.
        (-[WebView _pageVertically:]),
        (-[WebView _pageHorizontally:]):
	overlap by one arrow key's worth of scrolling instead of the
	teensy-weensy one click's worth.

2002-09-24  Chris Blumenberg  <cblu@apple.com>

	Documentation for WebHTMLView

        * WebView.subproj/WebHTMLView.h:

2002-09-24  Richard Williamson   <rjw@apple.com>

        Documentation changes.  Removal of imports from