@@ -2,7 +2,7 @@
      WebDefaultContextMenuDelegate.h
      Copyright 2002, Apple, Inc. All rights reserved.
 
-     Public header file.
+     Private header file.
 */
 
 
